--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,11 @@
 .App {
   text-align: center;
   margin-top: 18%;
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+  
 }
 
 
