--- a/client/src/Components/Ajoutstg.css
+++ b/client/src/Components/Ajoutstg.css
@@ -4,7 +4,7 @@
   border: 1px solid #577dfc;
   border-radius: 5px;
   padding: 20px;
-  margin: 9% auto;
+  margin: 6% auto;
   max-width: 500px;
 }
 
@@ -12,4 +12,38 @@
   display: flex;
   justify-content: space-around;
   margin: 5% 0px;
+}
+
+.cards{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 10% auto;
+  width: 87%;
+}
+
+.cards > * {
+    flex: 1 1 340px;
+}
+
+.show__btn{
+  display: flex;
+  justify-content: center;
+  margin-top: -2%;
+  scroll-behavior: smooth;
+}
+
+.container{
+  margin-bottom: 5%;
+  display: flex;
+  justify-content: center;
+}
+
+.card__bnts{
+  display: flex;
+  justify-content: space-around;
+}
+
+.card__btn{
+  width: 35%;
 }
